requested by Judy (open: update source file)

--- a/standards-guidelines/wcag/faq/index.html
+++ b/standards-guidelines/wcag/faq/index.html
@@ -91,7 +91,7 @@
   <ul style="align-self: center;">
     <li><a href="/WAI/" lang="en">Home</a></li><li><a lang="en" href="/WAI/standards-guidelines/"><span>Standards/<wbr>Guidelines</span></a></li><li><a lang="en" href="/WAI/standards-guidelines/wcag/"><span>Web Content – WCAG 2</span></a></li><li><a lang="en" href="/WAI/standards-guidelines/wcag/faq/" aria-current="page"><span>FAQ</span></a></li></ul>
 </nav>
-    <div class="default-grid with-gap leftcol">
+  <div class="default-grid with-gap leftcol">
 
   
     <div class="sidenav"><nav class="sn-contents" aria-label="Secondary">
@@ -145,7 +145,7 @@
     <aside class="box box-full"><header class="box-h  box-h-full"> <h2> Summary </h2></header><div class="box-i">
 
 <p>This page answers to some frequently asked questions (FAQ) about Web Content Accessibility Guidelines (WCAG). Let us know what <a href="#more">other questions</a> you have.<br />
-~<em><a href="http://w3.org/People/Shawn/">Shawn Henry</a></em>, <abbr title="World Wide Web Consortium">W3C</abbr> <abbr title="Web Accessibility Initiative">WAI</abbr>, <em>updated 18 March 2022</em></p>
+~<em><a href="http://w3.org/People/Shawn/">Shawn Henry</a></em>, <abbr title="World Wide Web Consortium">W3C</abbr> <abbr title="Web Accessibility Initiative">WAI</abbr>, <em>updated 13 May 2022</em></p>
 
 </div></aside>
 
@@ -320,8 +320,11 @@
 <p>Approval of WCAG 2.0 as an ISO standard benefits countries and organizations that can more easily adopt ISO standards. Countries that previously adapted WCAG 2.0 may now be able to <em>adopt WCAG 2.0 as is</em> by referencing ISO/IEC 40500.</p>
 
 <h3 id="isotranslations">Translations</h3>
-
 <p>W3C has offered our <a href="/WAI/standards-guidelines/wcag/translations/">WCAG 2.0 Authorized Translations</a> to be used for the ISO/IEC translations. We will update this page when more information about translations is available.</p>
+
+<h2 id="iso212">Does W3C plan to send WCAG 2.1 or WCAG 2.2 to ISO for endorsement?</h2>
+<p><strong>W3C does not plan to send WCAG 2.1</strong> to ISO for endorsement and would not support that action, given that WCAG 2.2 is expected to be finalized within 2022 and will represent an improvement in several respects.</p>
+<p><strong>W3C expects to send WCAG 2.2 to ISO for endorsement</strong>, and has started that process by notifying the ISO/IEC Joint Technical Committee 1 (JTC 1) of our intention to do so.</p>
 
 <h2 id="languages">Is WCAG 2 available in other languages?</h2>
 
@@ -369,7 +372,8 @@
   <footer id="wai-site-footer" class="page-footer default-grid" aria-label="Page">
     <div class="inner"
       >
-      <p><strong>Date:</strong> Updated 18 March 2022. First published October 2006.</p> <p><strong>Editor:</strong> <a href="http://www.w3.org/People/Shawn/">Shawn Lawton Henry</a>.</p> <p>Developed with input from the Education and Outreach Working Group (<a href="https://www.w3.org/WAI/about/groups/eowg/">EOWG</a>) and the Accessibility Guidelines Working Group (<a href="https://www.w3.org/WAI/about/groups/agwg/">AG WG</a>).</p>
+      <p><strong>Date:</strong> Updated 13 May 2022. First published October 2006.</p> 
+      <p><strong>Editor:</strong> <a href="http://www.w3.org/People/Shawn/">Shawn Lawton Henry</a>.</p> <p>Developed with input from the Education and Outreach Working Group (<a href="https://www.w3.org/WAI/about/groups/eowg/">EOWG</a>) and the Accessibility Guidelines Working Group (<a href="https://www.w3.org/WAI/about/groups/agwg/">AG WG</a>).</p>
 </div>
   </footer>
   
