manually adding to page contents

--- a/standards-guidelines/wcag/faq/index.html
+++ b/standards-guidelines/wcag/faq/index.html
@@ -171,6 +171,7 @@
     <li><a href="#techs">Do content authors (developers, designers, etc.) have to follow W3C's techniques to meet WCAG?</a></li>
     <li><a href="#techsnot">What would be the negative consequences of allowing <em>only</em> W3C's published techniques to be used for conformance to WCAG 2?</a></li>
     <li><a href="#iso">Is ISO/IEC 40500 the same as WCAG 2.0?</a></li>
+    <li><a href="#iso212">Does W3C plan to send WCAG 2.1 or WCAG 2.2 to ISO for endorsement?</a></li>
     <li><a href="#languages">Is WCAG 2 available in other languages?</a></li>
     <li><a href="#othertechs">Can I meet WCAG 2 with Javascript/Ajax, Silverlight, and other technologies?</a></li>
     <li><a href="#more">Where can I find answers to more of my questions?</a></li>
