--- a/standards-guidelines/wcag/index.html
+++ b/standards-guidelines/wcag/index.html
@@ -220,7 +220,7 @@
 
 <p>All requirements (“success criteria”) from 2.0 are included in 2.1. The 2.0 success criteria are exactly the same (verbatim, word-for-word) in 2.1.</p>
 
-<p>The 2.0 and 2.1 success criteria are exactly the same in 2.2, with <strong>two expections</strong>:</p>
+<p>The 2.0 and 2.1 success criteria are exactly the same in 2.2, with <strong>two exceptions</strong>:</p>
 <ul>
   <li><a href="https://www.w3.org/TR/WCAG22/#focus-visible">2.4.7 Focus Visible</a> is changed from Level AA in WCAG 2.1 to Level A in WCAG 2.2.</li>
   <li><a href="https://www.w3.org/TR/WCAG22/#parsing">4.1.1 Parsing</a> is obsolete and removed from WCAG 2.2. More information is in the <a href="https://www.w3.org/WAI/standards-guidelines/wcag/faq/#parsing411">WCAG 2 FAQ</a>.</li>
