changelog target fix

--- a/standards-guidelines/wcag/new-in-22/index.html
+++ b/standards-guidelines/wcag/new-in-22/index.html
@@ -300,7 +300,7 @@ span.note, span.ednote, span.warning { padding: .1em .5em .15em; }
   <li><a href="https://www.w3.org/TR/WCAG22/#parsing">4.1.1</a> Parsing: Removed. Added note explaning why it is obsolete. More information is in the <a href="https://www.w3.org/WAI/standards-guidelines/wcag/faq/#parsing411">WCAG 2 FAQ</a>.</li>
 </ul>
 
-<p>Previous changes are listed in the <a href="https://www.w3.org/TR/WCAG22/#changelog">changelog</a>.</p>
+<p>Previous changes are listed in the <a href="https://www.w3.org/TR/WCAG22/#change-log">changelog</a>.</p>
 
 <h2 id="guideline-24-navigable">Guideline 2.4 Navigable</h2>
 
